# virgil

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __main__.py  auth.py  central_db.py  config.py  csrf.py  db.py  exercise_library.py  main.py  rate_limit.py  security_headers.py  user_db.py  validation.py
app/migrations/: 001_initial_schema.py  002_migrate_llm_api_keys.py  003_experiment_sources.py  004_add_webhook_columns.py  005_feature_flags.py  006_training_overhaul.py  007_litellm_model_strings.py  008_onboarding.py  009_exercise_library.py  010_rename_feniks_flag.py  011_exercise_metric.py  012_llm_provider_no_check.py  013_training_exercise_archive.py  014_backup_default_on.py  015_general_experiments.py  runner.py
app/models/: bloodwork.py  daily.py  experiments.py  feniks.py  goals.py  life_scores.py  oura.py  user_profile.py
app/routers/: admin.py  api.py  auth.py  bloodwork.py  daily.py  dashboard.py  experiments.py  feniks.py  goals.py  life_scores.py  onboarding.py  oura.py  oura_webhook.py  settings.py  training.py
app/services/: backup.py  briefing.py  encryption.py  experiment_summary.py  llm.py  markdown_export.py  markdown_import.py  onboarding.py  oura_api.py  scheduler.py  streak.py
app/static/: manifest.json  service-worker.js
app/static/css/: app.css
app/static/js/: app.js  charts.js
app/templates/: admin_users.html  auth_login.html  auth_mfa_setup.html  auth_mfa_verify.html  auth_setup.html  auth_signup.html  base.html  bloodwork.html  daily.html  dashboard.html  experiment_detail.html  experiment_edit.html  experiment_new.html  experiments.html  feniks.html  goals.html  life_scores.html  offline.html  onboarding.html  oura.html  settings.html  training.html
app/templates/partials/: briefing_card.html
docs/superpowers/plans/: 2026-03-21-litellm-migration.md  2026-03-21-multi-user.md  2026-03-21-onboarding.md  2026-07-19-general-experiments.md
docs/superpowers/specs/: 2026-03-21-litellm-migration-design.md  2026-03-21-multi-user-design.md  2026-03-21-onboarding-design.md  2026-07-19-general-experiments-design.md
mcp_server/: virgil_mcp.py
scripts/: fix_user_db.py  import_data.py  migrate_to_multiuser.py  seed_demo.py
tests/: conftest.py  test_andy_generate.py  test_api.py  test_auth_flows.py  test_backup.py  test_bloodwork_flag.py  test_csrf_multipart.py  test_deploy_hardening.py  test_exercise_metric.py  test_experiments_lifecycle.py  test_export_and_health.py  test_factory_reset.py  test_feature_flags.py  test_forms_blank_numbers.py  test_general_experiments.py  test_llm_availability.py  test_migration_015.py  test_migration_upgrade.py  test_noporn_page.py  test_onboarding_experiment.py  test_oura_partial_sync.py  test_registration.py  test_scheduler_briefing.py  test_schema_fixes.py  test_service_worker.py  test_settings_library.py  test_training_page.py  test_training_validation.py  test_webhook_reconcile.py  test_webhook_routing.py
